complete app.ipynb

--- a/app.ipynb
+++ b/app.ipynb
@@ -17,19 +17,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Please restart the notebook kernel after running this cell.\n",
-    "!pip install -r requirements.txt | grep -v \"already satisfied\""
+    "!pip install -r requirements.txt --no-cache-dir --prefer-binary | grep -v \"already satisfied\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: jupyter [-h] [--version] [--config-dir] [--data-dir] [--runtime-dir]\n",
+      "               [--paths] [--json] [--debug]\n",
+      "               [subcommand]\n",
+      "\n",
+      "Jupyter: Interactive Computing\n",
+      "\n",
+      "positional arguments:\n",
+      "  subcommand     the subcommand to launch\n",
+      "\n",
+      "optional arguments:\n",
+      "  -h, --help     show this help message and exit\n",
+      "  --version      show the versions of core jupyter packages and exit\n",
+      "  --config-dir   show Jupyter config dir\n",
+      "  --data-dir     show Jupyter data dir\n",
+      "  --runtime-dir  show Jupyter runtime dir\n",
+      "  --paths        show all Jupyter paths. Add --json for machine-readable\n",
+      "                 format.\n",
+      "  --json         output paths as machine-readable json\n",
+      "  --debug        output debug information about paths\n",
+      "\n",
+      "Available subcommands: console dejavu events execute fileid kernel kernelspec\n",
+      "lab labextension labhub migrate nbconvert notebook run server troubleshoot\n",
+      "trust\n",
+      "\n",
+      "Jupyter command `jupyter-nbextension` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "# Please restart the notebook kernel after running this cell as well.\n",
     "!jupyter nbextension enable --py widgetsnbextension"
@@ -53,9 +85,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "a7def300",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['00.Haleakala_National_Park', '01.Mount_Rainier_National_Park', '02.Ljubljana_Castle', '03.Dead_Sea', '04.Wroclaws_Dwarves', '05.London_Olympic_Stadium', '06.Niagara_Falls', '07.Stonehenge', '08.Grand_Canyon', '09.Golden_Gate_Bridge', '10.Edinburgh_Castle', '11.Mount_Rushmore_National_Memorial', '12.Kantanagar_Temple', '13.Yellowstone_National_Park', '14.Terminal_Tower', '15.Central_Park', '16.Eiffel_Tower', '17.Changdeokgung', '18.Delicate_Arch', '19.Vienna_City_Hall', '20.Matterhorn', '21.Taj_Mahal', '22.Moscow_Raceway', '23.Externsteine', '24.Soreq_Cave', '25.Banff_National_Park', '26.Pont_du_Gard', '27.Seattle_Japanese_Garden', '28.Sydney_Harbour_Bridge', '29.Petronas_Towers', '30.Brooklyn_Bridge', '31.Washington_Monument', '32.Hanging_Temple', '33.Sydney_Opera_House', '34.Great_Barrier_Reef', '35.Monumento_a_la_Revolucion', '36.Badlands_National_Park', '37.Atomium', '38.Forth_Bridge', '39.Gateway_of_India', '40.Stockholm_City_Hall', '41.Machu_Picchu', '42.Death_Valley_National_Park', '43.Gullfoss_Falls', '44.Trevi_Fountain', '45.Temple_of_Heaven', '46.Great_Wall_of_China', '47.Prague_Astronomical_Clock', '48.Whitby_Abbey', '49.Temple_of_Olympian_Zeus']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torchvision\n",
+    "\n",
+    "learn_inf = torch.jit.load(\"checkpoints/transfer_exported.pt\")\n",
+    "print(learn_inf.class_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ca610d55be354dbca17b24ead07e66d9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='Please upload a picture of a landmark'), FileUpload(value={}, description='Upload'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import VBox, Button, FileUpload, Output, Label\n",
     "from PIL import Image\n",
@@ -67,7 +136,7 @@
     "import torch\n",
     "\n",
     "# Decide which model you want to use among the ones exported\n",
-    "# learn_inf = torch.jit.load(# YOUR CODE HERE)\n",
+    "learn_inf = torch.jit.load(\"checkpoints/transfer_exported.pt\")\n",
     "\n",
     "def on_click_classify(change):\n",
     "\n",
@@ -107,6 +176,9 @@
     "        landmark_name = learn_inf.class_names[idxs[i]]\n",
     "        \n",
     "        labels[i].value = f\"{landmark_name} (prob: {p:.2f})\"\n",
+    "\n",
+    "    btn_upload.value.clear()\n",
+    "    btn_upload._counter = 0\n",
     "\n",
     "\n",
     "# Putting back btn_upload to a widget for next cell\n",
@@ -156,9 +228,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "executing: jupyter nbconvert --to html app.ipynb\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook app.ipynb to html\n",
+      "/home/sagemaker-user/.conda/envs/venv/lib/python3.8/site-packages/nbformat/__init__.py:96: MissingIDFieldWarning: Cell is missing an id field, this will become a hard error in future nbformat versions. You may want to use `normalize()` on your notebooks before validations (available since nbformat 5.1.4). Previous versions of nbformat are fixing this issue transparently, and will stop doing so in the future.\n",
+      "  validate(nb)\n",
+      "[NbConvertApp] Writing 293272 bytes to app.html\n",
+      "executing: jupyter nbconvert --to html transfer_learning.ipynb\n",
+      "[NbConvertApp] Converting notebook transfer_learning.ipynb to html\n",
+      "[NbConvertApp] WARNING | Alternative text is missing on 2 image(s).\n",
+      "[NbConvertApp] Writing 484437 bytes to transfer_learning.html\n",
+      "executing: jupyter nbconvert --to html cnn_from_scratch.ipynb\n",
+      "[NbConvertApp] Converting notebook cnn_from_scratch.ipynb to html\n",
+      "[NbConvertApp] WARNING | Alternative text is missing on 3 image(s).\n",
+      "[NbConvertApp] Writing 1728288 bytes to cnn_from_scratch.html\n",
+      "Adding files to submission_2025-09-18T21h08m.tar.gz\n",
+      "src/__init__.py\n",
+      "src/create_submit_pkg.py\n",
+      "src/data.py\n",
+      "src/helpers.py\n",
+      "src/model.py\n",
+      "src/optimization.py\n",
+      "src/predictor.py\n",
+      "src/train.py\n",
+      "src/transfer.py\n",
+      "src/workspace_utils.py\n",
+      "app.ipynb\n",
+      "transfer_learning.ipynb\n",
+      "cnn_from_scratch.ipynb\n",
+      "app.html\n",
+      "transfer_learning.html\n",
+      "cnn_from_scratch.html\n",
+      "\n",
+      "----------------------------------------------------------------\n",
+      "Done. Please submit the file submission_2025-09-18T21h08m.tar.gz\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "!python src/create_submit_pkg.py"
    ]
@@ -180,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.20"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
